[gd_scene load_steps=10 format=2]

[ext_resource path="res://TemporalAssets/kenney_spaceshooterextension/PNG/Sprites/Station/EstacionEspacial.png" type="Texture" id=1]
[ext_resource path="res://TemporalAssets/uipack-space/PNG/SpriteZonaRecarga.png" type="Texture" id=2]
[ext_resource path="res://Juego/Estaciones/EstacionRecarga.gd" type="Script" id=3]
[ext_resource path="res://Juego/SFX/cargaSFX.tres" type="AudioStream" id=4]
[ext_resource path="res://Juego/SFX/vacioSFX.tres" type="AudioStream" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 92.522
height = 145.12

[sub_resource type="CircleShape2D" id=2]
radius = 405.87

[sub_resource type="Animation" id=3]
resource_name = "activado"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AreaCollision:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaRecarga/SpriteZonaRecarga:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 40, 40 ), Vector2( 42, 42 ), Vector2( 40, 40 ), Vector2( 38, 38 ), Vector2( 40, 40 ), Vector2( 42, 42 ), Vector2( 40, 40 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AreaRecarga/SpriteZonaRecarga:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.419608, 0.396078, 0.403922, 0.396078 ), Color( 0.470588, 0.47451, 0.486275, 0.498039 ), Color( 0.419608, 0.396078, 0.403922, 0.396078 ), Color( 0.470588, 0.47451, 0.486275, 0.498039 ), Color( 0.419608, 0.396078, 0.403922, 0.396078 ), Color( 0.470588, 0.47451, 0.486275, 0.498039 ), Color( 0.419608, 0.396078, 0.403922, 0.396078 ) ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("AreaCollision:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaRecarga/SpriteZonaRecarga:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 40, 40 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AreaRecarga/SpriteZonaRecarga:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.419608, 0.396078, 0.403922, 0.396078 ) ]
}

[node name="EstacionRecarga" type="Node2D"]
script = ExtResource( 3 )

[node name="AreaCollision" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 27

[node name="SpriteEstacion" type="Sprite" parent="AreaCollision"]
z_index = 1
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaCollision"]
shape = SubResource( 1 )

[node name="AreaRecarga" type="Area2D" parent="."]
space_override = 1
gravity_point = true
gravity = 1000.0
collision_layer = 0

[node name="SpriteZonaRecarga" type="Sprite" parent="AreaRecarga"]
modulate = Color( 0, 0.694118, 1, 1 )
self_modulate = Color( 0.419608, 0.396078, 0.403922, 0.396078 )
scale = Vector2( 40, 40 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaRecarga"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "activado"
anims/activado = SubResource( 3 )
anims/default = SubResource( 4 )

[node name="CargaSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="VacioSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="body_entered" from="AreaCollision" to="." method="_on_AreaCollision_body_entered"]
[connection signal="body_entered" from="AreaRecarga" to="." method="_on_AreaRecarga_body_entered"]
[connection signal="body_exited" from="AreaRecarga" to="." method="_on_AreaRecarga_body_exited"]
